<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_all_items"
            android:icon="@drawable/ic_list_white_18dp"
            android:title="@string/action_all_items"/>
        <item
            android:id="@+id/action_today"
            android:icon="@drawable/ic_today_white_18dp"
            android:title="@string/action_today"/>
        <item
            android:id="@+id/action_upcoming"
            android:icon="@drawable/ic_date_range_white_18dp"
            android:title="@string/action_upcoming"/>
        <item
            android:id="@+id/action_todos"
            android:icon="@drawable/ic_check_box_outline_blank_white_18dp"
            android:title="@string/action_todos"/>
        <item
            android:id="@+id/action_preferences"
            android:icon="@drawable/ic_settings_white_18dp"
            android:title="@string/action_preferences"/>
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_outline_white_18dp"
            android:title="@string/action_about"/>
    </group>
</menu>

